优化：优化线程池管理框架的获取规则，新增通过字符串进行换取线程池的方式，使获取线程池的方式更加灵活。